--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -4,10 +4,10 @@
 #
 #  id         :integer          not null, primary key
 #  product_id :integer
-#  user_id    :integer
 #  quantity   :integer
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  cart_id    :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
