--- a/test/fixtures/carts.yml
+++ b/test/fixtures/carts.yml
@@ -2,10 +2,13 @@
 #
 # Table name: carts
 #
-#  id         :integer          not null, primary key
-#  user_id    :integer
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  id             :integer          not null, primary key
+#  user_id        :integer
+#  created_at     :datetime         not null
+#  updated_at     :datetime         not null
+#  workflow_state :string
+#  payment_id     :integer
+#  shipping_id    :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
